[package]
name = "telnetls"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mimalloc = { version = "0.1", default-features = false }
tokio = { version = "1", features = ["full"] }
tokio-rustls = "0.24"
rustls-native-certs = "0.6"
rustls-pemfile = "1.0"
